@@ -10,9 +10,58 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="./mgrs.js"></script>
     <script src="./observer.js"></script>
+    <style>
+      #splash {
+          position: absolute;
+          
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          flex-direction: column;
+
+          top: 0;
+          bottom: 0;
+          left: 0;
+          right: 0;
+
+          width: 100%;
+          height: 100%;
+          background-color: #CCCCCC;
+          z-index: 100;
+
+          margin: auto;
+        }
+
+        @keyframes spin {
+          0% {
+            transform: rotate(0deg);
+          }
+          100% {
+            transform: rotate(360deg);
+          }
+        }
+      
+        .text { 
+          text-align: left;
+          text-color: black;
+          font-size: 1.5rem;
+          font-family: Verdana, sans-serif;
+          
+        }
+
+        .loading {
+          width: 24px;
+          height: 24px;
+          border-radius: 50%;
+          border: 0.25rem solid rgba(255, 255, 255, 0.2);
+          border-top-color: white;          
+          animation: spin 1s infinite linear;
+          }
+        }
+    </style>
   </head>
   <body>
-    <a-scene background="color: #87ceeb" render-order="background, foreground, fire, smoke, HUD" loading-screen="dotsColor: yellow; backgroundColor: black">     
+    <a-scene loadscreen background="color: #87ceeb" render-order="background, foreground, fire, smoke, HUD" loading-screen="dotsColor: yellow; backgroundColor: black">     
       <!-- Preload assets -->
       <a-assets>        
         <img id="crosshair" crossorigin="anonymous" src="https://cdn.glitch.com/0140ff64-dac6-408d-bf59-c093dd13ad3a%2FCrosshair3.png?v=1629202456710">
@@ -136,6 +185,25 @@
       ></a-entity>
       
     </a-scene>
+    
+    <div id="splash">
+      <img src="https://cdn.glitch.global/faddae4b-024b-4177-af7b-9e2db2934bce/WPSC_Logo.png?v=1653484630300" alt="West Point Simulation Center logo" height="20%">
+      <p>
+        <div class="text">
+          <h2>
+            Observed Fire Trainer
+          </h2>
+          C: toggle compass<br>
+          B: toggle binoculars<br>
+          G: toggle GPS<br>
+          WASD to walk<br>
+        </div>
+      </p><br>
+      <progress id="progress-bar" value="0.21" max="1"></progress>
+      <p>
+        <div class="loading"></div>
+      </p>      
+    </div>
 
     <script>         
       var isMobile = AFRAME.utils.device.isMobile();
@@ -149,7 +217,8 @@
       document.addEventListener("keypress", function(e){
         console.log("keypress",e.keyCode);
         if(e.keyCode == 32) { //space bar
-          setCamView('main');
+          setCamView('main'); //space bar returns to main
+          //swapCameras(); //space bar cycles views
         };
         if(e.code == "KeyB") { //b key
           toggleBino();     
