@@ -1,3 +1,6 @@
+25 MAY 2022
+Add loading splash screen, with instructions and progress bar
+
 23 MAY 2022
 Added a light as part of the compass rig.
 a-entity light="type: spot; color: #FFF; intensity: 0.5; target: #compassface; distance: 0.7; angle: 50; decay: 0.02;" position="0.01 0.5 0.05"
